<resources>
    <string name="app_name">Project1</string>
    <string name="summary">Jules Winnfield (Samuel L. Jackson) and Vincent Vega (John Travolta) are two hit men who are out to retrieve a suitcase stolen from their employer, mob boss Marsellus Wallace (Ving Rhames). Wallace has also asked Vincent to take his wife Mia (Uma Thurman) out a few days later when Wallace himself will be out of town. Butch Coolidge (Bruce Willis) is an aging boxer who is paid by Wallace to lose his fight. The lives of these seemingly unrelated people are woven together comprising of a series of funny, bizarre and uncalled-for incidents.</string>
    <string name="Theater">Theater</string>
    <string name="Date">Date</string>
    <string name="selected_item">Selected item:</string>
    <string name="order_now">Order Now</string>
    <string name="buy_now">Buy Now</string>
    <string name="sum">Sum:</string>
    <string name="purchase">Thank you for your purchase! </string>
    <string name="purchase2">You purchased </string>
    <string name="purchase3"> tickets for the movie Pulp Fiction at the </string>
    <string name="purchase4"> theater on </string>
    <string name="purchase5">. Your total is </string>
    <string name="purchase6">. Enjoy the movie!</string>
    <string name="chooseNumberOfTTickets">Choose number of tickets:</string>
    <string-array name="Theaters">
        <item>Rishon</item>
        <item>Jerusalem</item>
        <item>Ashdod</item>
    </string-array>

</resources>